--- a/src/components/features/FeatureGallery.scss
+++ b/src/components/features/FeatureGallery.scss
@@ -29,7 +29,7 @@ $gray: #ddd;
 		.tab {
 			display: flex;
 			align-items: flex-start;
-			justify-content: start;
+			justify-content: flex-start;
 			width: 50%;
 			padding: 15px;
 			cursor: pointer;
