--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -12,13 +12,24 @@ $text-color-dark: #f8f9fa;
 
 // Header styles
 .header {
+	/* Set a high z-index value to ensure the header is on top of other elements */
+	position: fixed; /* Add this line to make the header fixed */
+	top: 0; /* Set the position from the top of the viewport */
+	left: 0; /* Set the position from the left of the viewport */
+	right: 0; /* Set the position from the right of the viewport */
+	z-index: 9999;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 10px;
+	// add padding on  right alone of 10px and left side 100px to make the header fixed */
+	padding: 0 10px 0 100px;
 	background-color: $background-color;
 	color: $text-color;
 	transition: all 0.3s;
+
+	&.shadow {
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	}
 
 	// Dark theme styles
 	&.dark {
