--- a/src/components/leadership/Leadership.scss
+++ b/src/components/leadership/Leadership.scss
@@ -1,167 +1,192 @@
 .Leadership {
 	h2 {
-		text-align: center;
-		margin-bottom: 2rem;
-		font-size: 2rem;
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		margin-left: 5%;
+		font-size: 32px;
+		font-weight: 600;
+		margin-bottom: 24px;
+		font-size: 1.2rem;
+		&::before {
+			position: relative;
+			bottom: -0.1em;
+			content: '';
+			display: inline-block;
+			width: 0.9em;
+			height: 0.9em;
+			background-color: rgb(53, 55, 180);
+			line-height: 0;
+			margin-right: 1em;
+		}
 	}
 
 	.card-slider {
-		.row {
-			margin: 0;
+		position: relative;
+		margin: 3rem;
+
+		.prev-btn,
+		.next-btn {
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			font-size: 24px;
+			color: #fff;
+			background-color: #333;
+			border: none;
+			border-radius: 50%;
+			width: 40px;
+			height: 40px;
+			cursor: pointer;
+			transition: all 0.3s ease;
+
+			&:hover {
+				background-color: #555;
+			}
+
+			&:disabled {
+				cursor: not-allowed;
+				opacity: 0.5;
+			}
+		}
+
+		.prev-btn {
+			left: 0;
+			margin-left: 16px;
+			z-index: 999;
+		}
+
+		.next-btn {
+			right: 0;
+			margin-right: 16px;
+			z-index: 999;
+		}
+
+		.card-deck {
+			display: flex;
+			flex-wrap: wrap;
 			justify-content: space-evenly;
+			margin-top: 24px;
 
 			.card {
-				margin: 1rem;
-				position: relative;
+				width: calc(20% - 16px);
+				margin-bottom: 32px;
 				overflow: hidden;
-				transition: all 0.3s ease-in-out;
-				z-index: 1;
+				box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.2);
+				border-radius: 8px;
+				transition: all 0.3s ease;
 
 				&:hover {
-					transform: scale(1.05);
-					box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+					box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.4);
+					transform: translateY(-8px);
+				}
+
+				&:nth-child(2n) {
+					.card-image {
+						transform: rotate(3deg);
+						background-color: #f5f5f5;
+					}
+				}
+
+				&:nth-child(3n) {
+					.card-image {
+						transform: rotate(-3deg);
+						background-color: #f5f5f5;
+					}
 				}
 
 				.card-image {
-					height: 200px;
+					position: relative;
 					overflow: hidden;
+					border-radius: 8px 8px 0px 0px;
+					box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+					transition: all 0.3s ease;
 
 					img {
-						height: 100%;
 						width: 100%;
-						object-fit: cover;
+						height: auto;
+						display: block;
+						transition: all 0.3s ease;
 					}
 				}
 
 				.card-body {
-					padding: 1rem;
+					padding: 16px;
 
-					h5 {
-						margin-bottom: 0.5rem;
-						font-size: 1.25rem;
-						font-weight: bold;
-
-						a {
-							color: #333;
-							text-decoration: none;
-							display: block;
-							position: relative;
-							z-index: 1;
-
-							&::after {
-								content: '';
-								position: absolute;
-								left: 0;
-								bottom: -5px;
-								width: 100%;
-								height: 2px;
-								background-color: #333;
-								transform: scaleX(0);
-								transform-origin: left;
-								transition: all 0.3s ease-in-out;
-							}
-
-							&:hover::after {
-								transform: scaleX(1);
-							}
+					.card-title {
+						font-size: 20px;
+						font-weight: 600;
+						margin-bottom: 8px;
+						&:hover {
+							color: #3e7091;
+						}
+						&::before {
+							content: '';
+							display: inline-block;
+							width: 0.5em;
+							height: 0.5em;
+							background-color: rgb(53, 55, 180);
+							line-height: 0;
+							margin-right: 0.5rem;
 						}
 					}
 
-					p {
-						margin-bottom: 0;
-						font-size: 1rem;
+					.card-text {
+						font-size: 16px;
 						color: #666;
+						margin-bottom: 8px;
+						&:hover {
+							color: #3e7091;
+						}
 					}
 				}
 			}
 		}
-
-		@media (min-width: 768px) {
-			.row {
-				display: flex;
-				flex-wrap: nowrap;
-				overflow-x: auto;
-				scrollbar-width: none;
-				-ms-overflow-style: none;
-
-				&::-webkit-scrollbar {
-					display: none;
+	}
+	@media (max-width: 992px) {
+		.card-slider {
+			.card-deck {
+				.card {
+					width: calc(33.33% - 16px);
 				}
 			}
+		}
+	}
 
-			.card {
-				flex: 0 0 calc(50% - 1rem);
-				margin: 0.5rem;
-				min-width: 300px;
+	@media (max-width: 768px) {
+		.card-slider {
+			padding-top: 2rem;
+			padding-bottom: 2rem;
 
-				&:first-child,
-				&:last-child {
-					margin: 0.5rem 0.5rem 0.5rem 0;
+			.card-deck {
+				flex-direction: column;
+				align-items: center;
+
+				.card {
+					width: calc(50% - 16px);
+					margin: 8px 0;
 				}
+			}
+		}
+	}
 
-				&:nth-last-child(2),
-				&:nth-last-child(2) ~ .card {
-					margin: 0.5rem 0 0.5rem 0.5rem;
-				}
+	@media (max-width: 576px) {
+		.card-slider {
+			.prev-btn,
+			.next-btn {
+				width: 40px;
+				height: 40px;
+				font-size: 0.8rem;
+			}
 
-				&:hover {
-					transform: none;
-					box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-				}
+			.card-deck {
+				justify-content: center;
+				align-items: center;
+				flex-direction: column;
 
-				.card-image {
-					height: 200px;
-
-					img {
-						height: 100%;
-						width: 100%;
-						object-fit: cover;
-						transition: transform 0.3s ease-in-out;
-					}
-				}
-
-				.card-body {
-					padding: 1rem;
-					height: 100px;
-					display: flex;
-					flex-direction: column;
-					justify-content: space-between;
-
-					h5 {
-						margin-bottom: 0.5rem;
-						font-size: 1.25rem;
-						font-weight: bold;
-
-						a {
-							color: #333;
-							text-decoration: none;
-							display: block;
-							position: relative;
-							z-index: 1;
-							&::after {
-								content: '';
-								position: absolute;
-								left: 0;
-								bottom: -5px;
-								width: 100%;
-								height: 2px;
-								background-color: #333;
-								transform: scaleX(0);
-								transform-origin: left;
-								transition: all 0.3s ease-in-out;
-							}
-
-							&:hover::after {
-								transform: scaleX(1);
-							}
-						}
-					}
-
-					p {
-						margin-bottom: 0;
-						font-size: 1rem;
-						color: #666;
-					}
+				.card {
+					width: calc(100% - 16px);
+					margin: 8px 0;
 				}
 			}
 		}
