--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,70 +1,102 @@
 .footer {
-	background-color: #f4f4f4;
-	padding: 50px;
+	background-color: #f5f5f5;
+	padding: 60px 0;
 
 	.footerContainer {
-		max-width: 100%;
+		max-width: 90%;
 		margin: 0 auto;
+
+		@media (max-width: 768px) {
+			padding: 0 30px;
+		}
 
 		.footerTopContainer {
 			display: flex;
+			align-items: flex-start;
 			flex-direction: row;
-			align-items: center;
 			justify-content: space-between;
 
-			@media screen and (max-width: 768px) {
+			@media (max-width: 768px) {
 				flex-direction: column;
+				align-items: flex-start;
 			}
 
-			.socialContainer {
-				display: inline-flex;
+			&.socialContainer {
+				display: flex;
 				flex-direction: row;
-				align-items: flex-start;
-				justify-content: space-around;
+				justify-content: space-evenly;
 
-				@media screen and (max-width: 768px) {
+				@media (max-width: 768px) {
 					flex-direction: column;
+					align-items: flex-start;
 				}
 
 				.web {
 					display: flex;
 					align-items: center;
+					margin-right: 30px;
+
+					@media (max-width: 768px) {
+						margin-right: 0;
+						margin-bottom: 20px;
+					}
 
 					img {
-						margin-right: 20px;
-						width: 25%;
-						height: 25%;
-						@media screen and (max-width: 768px) {
-							width: 50%;
-							height: 50%;
-						}
+						height: 50px;
 					}
 
 					.social_links {
 						display: flex;
-						flex-direction: row;
-						align-items: center;
-						justify-content: space-around;
-						@media screen and (max-width: 768px) {
-							flex-direction: column;
-						}
 
 						a {
-							display: inline-flex;
-							align-items: center;
+							display: flex;
 							justify-content: center;
-							width: 40px;
-							height: 40px;
-							background-color: #fff;
+							align-items: center;
+							width: 30px;
+							height: 30px;
 							border-radius: 50%;
-							margin-right: 10px;
+							margin-left: 10px;
+							color: #fff;
+							background-color: #333;
+							transition: all 0.3s ease;
 							text-decoration: none;
-							color: #666;
-							font-size: 20px;
-							font-weight: 600;
 
-							img {
-								width: 20px;
+							&:hover {
+								background-color: #ff5722;
+								transform: translateY(-5px);
+							}
+
+							&:nth-child(1) {
+								// radial background for facebook icons
+								background: radial-gradient(
+									circle at 30% 107%,
+									#a8a8a5 0%,
+									#329ac5 5%,
+									#005a8f 60%,
+									#6ba7b7 90%
+								);
+							}
+
+							&:nth-child(2) {
+								// radial background for twitter
+								background: radial-gradient(
+									circle at 30% 107%,
+									#fdf497 0%,
+									#fdf497 5%,
+									#83a4d4 60%,
+									#83a4d4 90%
+								);
+							}
+
+							&:nth-child(3) {
+								background: radial-gradient(
+									circle at 30% 107%,
+									#fdf497 0%,
+									#fdf497 5%,
+									#fd5949 45%,
+									#d6249f 60%,
+									#285aeb 90%
+								);
 							}
 						}
 					}
@@ -72,50 +104,51 @@
 
 				.routeContainer {
 					display: flex;
-					align-items: flex-start;
-					margin-left: 20px;
 					flex-direction: row;
-					justify-content: space-around;
-					@media screen and (max-width: 768px) {
+					align-items: flex-start;
+					justify-content: space-evenly;
+
+					@media (max-width: 400px) {
+						margin-bottom: 20px;
 						flex-direction: column;
-						margin-left: 0;
 					}
+
 					.routes {
-						display: flex;
-						flex-direction: column;
-						align-items: flex-start;
-						justify-content: space-evenly;
-						margin-left: 20px;
-						@media screen and (max-width: 768px) {
-							align-items: center;
-							margin-left: 0;
+						margin-bottom: 20px;
+						:nth-child(1) {
+							margin-right: 30px;
 						}
+						:nth-child(2) {
+							margin-right: 20px;
+						}
+
 						ul {
-							list-style-type: none;
-							margin: 0;
+							list-style: none;
 							padding: 0;
+							margin: 0;
 
 							li {
 								margin-bottom: 10px;
 
 								a {
-									color: #666;
+									color: #333;
+									font-weight: 500;
+									transition: all 0.3s ease;
 									text-decoration: none;
-									font-weight: 600;
-									text-decoration: none;
-									font-size: 14px;
+
+									&:hover {
+										color: #ff5722;
+										transform: translateX(5px);
+									}
 								}
 							}
 						}
 					}
 				}
-				.address {
-					display: flex;
-					flex-direction: column;
-					align-items: flex-start;
-					justify-content: space-evenly;
-					margin-left: 20px;
 
+				.address {
+					flex-grow: wrap;
+					max-width: 20%;
 					ul {
 						list-style: none;
 						padding: 0;
@@ -123,39 +156,77 @@
 
 						li {
 							margin-bottom: 10px;
-
 							a {
-								color: #333;
-								display: flex;
-								align-items: center;
 								text-decoration: none;
-								transition: color 0.3s ease;
+								color: #333;
+								font-weight: 500;
+								transition: all 0.3s ease;
 
 								&:hover {
-									color: #007bff;
+									color: #ff5722;
+									transform: translateX(5px);
 								}
+							}
+
+							.phone,
+							.mail,
+							.location {
+								display: flex;
+								align-items: center;
+								color: #333;
+								font-weight: 500;
+								transition: all 0.3s ease;
 
 								i {
 									margin-right: 10px;
 								}
-							}
-						}
 
-						.phone {
-							i {
-								color: #28a745;
+								&:hover {
+									color: #ff5722;
+									transform: translateX(5px);
+								}
 							}
-						}
 
-						.mail {
-							i {
-								color: #007bff;
+							.phone {
+								i {
+									color: #4caf50;
+									transform: rotate(140deg);
+									transition: transform 0.5s ease-in-out;
+								}
+								&:hover {
+									i {
+										transform: rotate(90deg);
+									}
+								}
 							}
-						}
 
-						.location {
-							i {
-								color: #dc3545;
+							.mail {
+								i {
+									color: #ff9800;
+								}
+							}
+
+							.location {
+								i {
+									color: #03a9f4;
+								}
+								// add one jump to the icon
+								&:hover {
+									i {
+										animation: jump 0.5s ease-in-out;
+									}
+								}
+								@keyframes jump {
+									0% {
+										transform: translateY(0);
+									}
+									50% {
+										transform: translateY(-10px);
+									}
+									100% {
+										transform: translateY(0);
+									}
+								}
 							}
 						}
 					}
